--- a/library_frontend/src/App.css
+++ b/library_frontend/src/App.css
@@ -1,6 +1,6 @@
 /* ----------------------------------------------- Home Page Style ---------------------------------- */
  .bg {
-  background-image: url("../public/home.jpg");
+  background-image: url("assets/images/2.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
