--- a/library_frontend/src/App.css
+++ b/library_frontend/src/App.css
@@ -125,7 +125,7 @@
   margin-left: -1rem; */
 }
 .authors-conten {
-  margin-top: 12%;
+  /* margin-top: 12%; */
 }
 @media only screen and (max-width: 379px) {
   .hide-column {
