Completed Category Panel in the admin frontend module (Delete and Update Category)

--- a/admin_frontend/src/index.css
+++ b/admin_frontend/src/index.css
@@ -13,6 +13,10 @@ code {
 }
 
 
-.navListHover :hover{
+.navListHover:hover{
+  cursor: pointer;
+}
+
+.hoverableImage:hover{
   cursor: pointer;
 }
