--- a/library_frontend/src/App.css
+++ b/library_frontend/src/App.css
@@ -210,3 +210,8 @@
 .card-item {
   width: 18rem;
 }
+/*****************************************************/
+.wrapper {
+  height: 300px;
+}
+/****************************************************/
