Done implementing add new Category mode

--- a/admin_frontend/src/App.css
+++ b/admin_frontend/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+
+.addNewItemButton{
+  margin: 3%;
+}
+
+.addNewItemButton:hover{
+  cursor: pointer;
+}
