--- a/library_frontend/src/components/Book.css
+++ b/library_frontend/src/components/Book.css
@@ -5,15 +5,15 @@
 
 .beside {
     float:left;
-    color:rgb(218, 226, 103);
     margin-left:30px;
     text-align: left;
 }
-.card{
+.cardAndrateAndselect{
     float:left;
     margin-bottom: 15px;
 }
 .description{
+    margin-top: 20px;
     width: 900px;
     height:300px;
     overflow-x: hidden;
@@ -22,6 +22,7 @@
     scrollbar-width: thin;
     border:solid 0.5px;
     border-radius:5px;
+    border-color:rgb(218, 226, 103);
 }
 .description p {
     color:white;
@@ -30,6 +31,12 @@
     padding-top:25px;
     padding-left: 5px;
 }
+.authorname, .category{
+    color:rgb(184,115,51);
+}
+/* .authorname:hover{
+    color:white;
+} */
 
 .authorbooks{
     
@@ -62,5 +69,29 @@ h5{
     
     margin:10px;
 }
-
+.selectt, .ratingg{
+    margin-left:15px;
+}
+::-webkit-scrollbar {
+    width: 2px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(214, 226, 47); 
+  }
+   
+  .userRatingnum{
+      margin-left:20px;
+  }
 
