--- a/admin_frontend/src/App.css
+++ b/admin_frontend/src/App.css
@@ -31,6 +31,58 @@
   width: 10%;
 }
 
+.itemCell{
+  width: 20%;
+  height: 5%;
+  overflow: hidden;
+}
+
+.itemsTable{
+  table-layout: auto;
+  overflow: hidden;
+}
+
+.firstnameCell{
+  width: 5%;
+  overflow: hidden;
+}
+
+.lastnameCell{
+  width: 5%;
+  overflow: hidden;
+}
+
+.DOBCell{
+  width: 25%;
+  overflow: hidden;
+}
+
+.photoCell{
+ width: 20%;
+ overflow: hidden;
+}
+
+.bioCell{
+  width: 10%;
+  overflow: hidden;
+}
+
+.actionButtonCell{
+  width: 5%;
+  overflow: hidden;
+}
+
+.idCell{
+  width: 5%;
+  overflow: hidden;
+}
+
+.indexCell{
+  width: 5%;
+  overflow: hidden;
+}
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
