--- a/library_frontend/src/App.css
+++ b/library_frontend/src/App.css
@@ -262,3 +262,63 @@
   background-size: 100% 100%; */
 }
 /****************************************************/
+
+.custom-card-img {
+  max-width: 100%;
+  display: block;
+  transform: scale(1.3);
+  transition: all 0.3s ease-out;
+}
+
+.ui-card {
+  max-width: 100%;
+  background: radial-gradient(#111 50%, #000 100%);
+  overflow: hidden;
+  position: relative;
+}
+.ui-card:hover .custom-card-img {
+  transform: scale(1.1) translateY(-20px);
+  opacity: 0.3;
+}
+.info {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 15px;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+}
+.info h3 {
+  font-weight: 700;
+  font-size: 32px;
+  margin: 0 0 20px;
+  transform: translateY(30px);
+  transition: all 0.3s ease-out;
+  opacity: 0;
+}
+.info p {
+  transform: translateY(30px);
+  transition: all 0.3s ease-out 0.4s;
+  opacity: 0;
+}
+.info button {
+  color: #fff;
+  background: #34aff3;
+  transform: translateY(30px);
+  transition: all 0.3s ease-out 0.4s;
+  opacity: 0;
+}
+.ui-card:hover .info h3 {
+  opacity: 1;
+  transform: translateY(0);
+}
+.ui-card:hover .info button {
+  opacity: 1;
+  transform: translateY(0);
+}
+.ui-card:hover .info p {
+  opacity: 1;
+  transform: translateY(0);
+}
