--- a/library_frontend/src/components/LoggedUserComponents/Author.css
+++ b/library_frontend/src/components/LoggedUserComponents/Author.css
@@ -1,29 +1,47 @@
 @import url('http://fonts.cdnfonts.com/css/new-century-schoolbook');
-.parentContainer{
+/* .parentContainer{
     margin:20px;
+} */
+.all{
+    
+    width:1050px;
+    height:60%;
+    /* padding-left: 40px; */
+    
 }
 
-.beside {
+ .all .beside {
     float:left;
+    /* width:100%; */
+    margin-top:5px;
+    width:670px;
+    height:415px;
+    
+
     color:rgb(218, 226, 103);
-    margin-left:30px;
+    
+    /* margin-left:70px; */
     text-align: left;
+    
+
 }
-.card{
+ .all .card{
+    
     float:left;
-    margin-bottom: 15px;
+     
 }
-.description{
-    width: 900px;
-    height:300px;
-    overflow-x: hidden;
+ .beside .description{
+    
+     overflow-x: hidden;
     overflow-y: auto;
     scrollbar-color: #c56d32 #b69a88;
     scrollbar-width: thin;
     border:solid 0.5px;
-    border-radius:5px;
+    border-radius:5px; 
+    width:670px;
+    height:325px;
 }
-.description p {
+ .all .beside .description p {
     color:white;
     font-family: "New Century Schoolbook", TeX Gyre Schola, serif;
     font-size: 20px;
@@ -36,7 +54,6 @@
     height:350px;
     overflow-y: auto;
     overflow-x: hidden;
-    
     clear:both;
     text-align:left;
     border:solid 1px;
