--- a/library_frontend/src/App.css
+++ b/library_frontend/src/App.css
@@ -180,17 +180,6 @@
   height: 5rem;
 }
 
-.author-image-Home-right {
-  /* float: right; */
-  /* margin-top: -2rem;
-  margin-right: -1rem; */
-}
-
-.author-image-Home-left {
-  /* float: left; */
-  /* margin-top: -2rem;
-  margin-left: -1rem; */
-}
 .authors-background-image {
   /* background-image: url(./assets/images/HomeCover.jpg); */
   background-image: url(./assets/images/AuthorsCover2.jpg);
@@ -205,7 +194,65 @@
   .hide-column {
     display: none;
   }
+} /***********************Home Books*******************************/
+.card-wrapper {
+  position: relative;
 }
+.card-middle {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.home-book-card {
+  width: 100%;
+  height: 100%;
+}
+.front,
+.back {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  transition: all 0.6s linear;
+}
+.front img {
+  height: 100%;
+}
+.front {
+  background: #f1f1f1;
+  transform: perspective(600px) rotateY(0deg);
+}
+.back {
+  background: #f1f1f1;
+  transform: perspective(600px) rotateY(180deg);
+}
+.back-content {
+  color: #2c3e50;
+  text-align: center;
+  width: 100%;
+}
+.custom-sm {
+  margin: 20px 0;
+}
+.custom-sm button {
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  color: #2c3e50;
+  font-size: 18px;
+  transition: 0.4s;
+}
+.home-book-card:hover > .front {
+  transform: perspective(600px) rotateY(-180deg);
+}
+.home-book-card:hover > .back {
+  transform: perspective(600px) rotateY(0deg);
+}
+/****************************************************************/
 /*****************************************************/
 .card-item {
   width: 18rem;
@@ -321,4 +368,12 @@
 .ui-card:hover .info p {
   opacity: 1;
   transform: translateY(0);
+}
+/*********************************rating*****************************************/
+.star {
+  cursor: pointer;
+  transition: color 200ms;
+}
+input[type='radio'] {
+  display: none;
 }
