--- a/library_frontend/src/components/LoggedUserComponents/Author.css
+++ b/library_frontend/src/components/LoggedUserComponents/Author.css
@@ -46,12 +46,14 @@
     font-family: "New Century Schoolbook", TeX Gyre Schola, serif;
     font-size: 20px;
     padding-top:25px;
-    padding-left: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .authorbooks{
     
     height:350px;
+    width:77rem;
     overflow-y: auto;
     overflow-x: hidden;
     clear:both;
