--- a/library_frontend/src/components/LoggedUserComponents/Book.css
+++ b/library_frontend/src/components/LoggedUserComponents/Book.css
@@ -12,8 +12,9 @@
     float:left;
     margin-bottom: 15px;
 }
-.description{
+.beside .description{
     margin-top: 20px;
+    margin-bottom: 15px;
     width: 900px;
     height:300px;
     overflow-x: hidden;
@@ -24,12 +25,13 @@
     border-radius:5px;
     border-color:rgb(218, 226, 103);
 }
-.description p {
+.beside .description p {
     color:white;
     font-family: "New Century Schoolbook", TeX Gyre Schola, serif;
-    font-size: 20px;
+    font-size: 18px;
     padding-top:25px;
-    padding-left: 5px;
+    padding-left: 10px;
+    padding-right:10px;
 }
 .authorname, .category{
     color:rgb(184,115,51);
@@ -48,6 +50,7 @@
     text-align:left;
     border:solid 1px;
     border-radius: 10px;
+    margin-top: 20px;
     
 }
 h5{
@@ -94,7 +97,4 @@ h5{
   .userRatingnum{
       margin-left:20px;
   }
-  /* .authorname link:link{
-    color:rgb(184,115,51);  
-  } */
 
