--- a/admin_frontend/src/App.css
+++ b/admin_frontend/src/App.css
@@ -38,8 +38,7 @@
 }
 
 .itemsTable{
-  table-layout: fixed;
-  overflow: hidden;
+  table-layout: auto;
   min-height: 550px;
 }
 
@@ -129,4 +128,26 @@
 
 .addNewItemButton:hover{
   cursor: pointer;
+}
+
+.horizontal-scroll {
+  overflow-y: auto;
+  overflow-x: auto;
+  clear: both;
+  width: 100%;
+  height: 500px;
+}
+
+.cellHeight{
+  overflow: hidden;
+  height: 20px;
+}
+
+.rowData{
+  height: 20px;
+}
+
+.logoutBtn{
+  margin-top: 2px;
+  margin-right: 2px; 
 }
